2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Config/FoldingHash.pm: Fix use of Tie::StdHash

2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Fix aborted, set storage stats to
	  TERMINATED_*

2017-06-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-chunker+2taper-flush.pl,
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl,
	* installcheck/success-dumper-chunker+taper-flush.pl: Set reserve = 0

2017-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Set 'aborted'. Always set TERMINATED* on
	  dead_run
	* installcheck/Amanda_Rest_Runs.pl: Fix

2017-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (start_degraded_mode): Go in degraded mode if
	  there is no storage

2017-06-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: dp_degraded_modemust be TRUE if nb_storage == 0

2017-06-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Rest.pm: We need WWW::Curl::Easy version
	  4.14 or newer

2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix for x-amz-server-side-encryption

2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl.
	  installcheck/amstar.pl: Fix for !SINGLE_USERID

2017-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.h (_S3Device): last_byte_read,
	  next_block_to_read, next_byte_to_read must be gint64

2017-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c (3600096): Print the security_file
	* common-src/security-file.c (security_file_check_path): Add the
	  security_file to the message
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl,
	  installcheck/amstar.pl: Test it

2017-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c: Fix planner looping