@@ -1,3 +1,8 @@
+2017-07-19  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/s3-device.c: Use S3_name
+	* device-src/s3.c (S3_name, S3_bucket_name): Define
+	* device-src/s3.h (S3_name, S3_bucket_name): Add prototype
+
 2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Config/FoldingHash.pm: Fix use of Tie::StdHash
 
